--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -13,6 +13,8 @@ once_cell = "1.17.1"
 ctrlc = "3.2.5"
 dbus = "0.9.7"
 dbus-crossroads = "0.5.2"
+anyhow = "1"
+thiserror = "1.0.40"
 
 [build-dependencies]
 flutter_rust_bridge_codegen = "1"
