--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_rust_bridge: ^1.75.1
   ffi: ^2.0.1
-  flutter_acrylic: ^1.1.2
   freezed_annotation: ^2.2.0
   image: ^4.0.16
+  window_manager: ^0.3.2
 
 dev_dependencies:
   flutter_test:
