--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,13 @@ dependencies:
   ffi: ^2.0.1
   freezed_annotation: ^2.2.0
   image: ^4.0.16
-  window_manager: ^0.3.2
-  desktop_multi_window: ^0.2.0
+  window_manager:
+        git:
+            url: https://github.com/Kingtous/rustdesk_window_manager
+  desktop_multi_window:
+    git:
+        url: https://github.com/Kingtous/rustdesk_desktop_multi_window
+
 
 dev_dependencies:
   flutter_test:
