refactor + popup OK

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,9 @@ dependencies:
   freezed_annotation: ^2.2.0
   image: ^4.0.16
   window_manager: ^0.3.2
-  desktop_multi_window: ^0.2.0
+  desktop_multi_window:
+    git:
+      url: https://github.com/LucaCoduriV/flutter_gtk_layer_shell.git
 
 
 dev_dependencies:
