--- a/notiflut_deamon/pubspec.yaml
+++ b/notiflut_deamon/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   desktop_multi_window:
     git:
       url: https://github.com/LucaCoduriV/flutter_gtk_layer_shell.git
+      ref: 60686492f6522a96d99e1e2ca9beeec46884347b
 
 dependency_overrides: 
   flutter_svg: ^1.0.0
