created script to gen bridge + fix deamon to daemon

--- a/notiflut_daemon/notiflut.systemd.service
+++ b/notiflut_daemon/notiflut.systemd.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Notiflut notification deamon
+Description=Notiflut notification daemon
 PartOf=graphical-session.target
 
 [Service]
