--- a/notiflut_daemon/pubspec.yaml
+++ b/notiflut_daemon/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
             url: https://github.com/LucaCoduriV/flutter_gtk_layer_shell.git
             ref: 60686492f6522a96d99e1e2ca9beeec46884347b
     flutter_inset_box_shadow: ^1.0.8
+    get_it: ^7.6.0
+    get_it_mixin: ^4.2.0
+    json_annotation: ^4.8.1
 
 dependency_overrides:
     flutter_svg: ^1.0.0
@@ -63,6 +66,7 @@ dev_dependencies:
     ffigen: ^7.2.11
     build_runner: ^2.3.3
     freezed: ^2.3.2
+    json_serializable: ^6.7.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
