--- a/notiflut_ctl/Cargo.toml
+++ b/notiflut_ctl/Cargo.toml
@@ -10,4 +10,6 @@ dbus = "0.9.7"
 dbus-crossroads = "0.5.2"
 thiserror = "1.0.40"
 anyhow = "1"
+serde = {version = "1.0.188", features = ["derive"] }
+serde_json = "1.0.105"
 clap = {version = "4.2.1", features=["cargo", "derive"]}
