--- a/notiflut_daemon/pubspec.yaml
+++ b/notiflut_daemon/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   window_manager:
     git:
       url: https://github.com/LucaCoduriV/window_manager.git
-      ref: main 
+      ref: 6f627e825db10d2f45bef0e0bbabdf5d1ecf1cb3
   open_url: ^2.0.1
   get_it: ^7.6.4
   get_it_mixin: ^4.2.2
