--- a/notiflut_daemon/native/notification_server/Cargo.toml
+++ b/notiflut_daemon/native/notification_server/Cargo.toml
@@ -17,7 +17,7 @@ thiserror = "1.0.40"
 chrono = "^0.4.24"
 freedesktop-icons = "0.2.3"
 freedesktop-desktop-entry = "0.5.0"
-surrealdb = { version = "1.0.0-beta.10", features = ["kv-mem"] }
+surrealdb = { version = "1.0.0", features = ["kv-rocksdb"] }
 serde = { version = "1.0.188", features = ["derive"] }
 
 [build-dependencies]
