build script updated but not tested

--- a/build_scripts/PKGBUILD
+++ b/build_scripts/PKGBUILD
@@ -1,7 +1,7 @@
 pkgname=notiflut
 pkgver=0.2.1
 pkgrel=1
-pkgdesc="A simple notificaion daemon with a GTK panel for checking previous notifications like other DEs"
+pkgdesc="A simple notificaion daemon with a notification center panel for checking previous notifications like other DEs"
 _pkgfoldername=Notiflut-Land
 url="https://github.com/LucaCoduriV/$_pkgfoldername"
 arch=(
@@ -11,15 +11,15 @@ arch=(
 )
 license=('Apache-2.0')
 depends=("gtk3" "gtk-layer-shell" "dbus" "glib2" "gobject-introspection" "libgee" "json-glib" "libhandy" "libpulse" )
-conflicts=("notiflut" "notiflut-client")
-provides=("notiflut" "notiflut-client")
+conflicts=("notiflut" "notiflut_ctl")
+provides=("notiflut" "notiflut_ctl")
 makedepends=('flutter' 'clang' 'cmake' 'ninja' 'gtk3' 'pkgconf' 'xz' 'rust')
 source=('git+https://github.com/LucaCoduriV/Notiflut-Land.git')
 sha256sums=('SKIP')
 
 build() {
     cd "$srcdir/$_pkgfoldername/notiflut_daemon"
-    flutter_rust_bridge_codegen --rust-input native/src/api.rs --dart-output lib/src/native/bridge_generated.dart --dart-decl-output lib/src/native/bridge_definitions.dart
+    protoc --proto_path=./messages --dart_out=./lib/messages 
     flutter build linux --release
 
     cd "$srcdir/$_pkgfoldername/notiflut_ctl"
