--- a/notiflut_daemon/native/notification_server/Cargo.toml
+++ b/notiflut_daemon/native/notification_server/Cargo.toml
@@ -17,9 +17,9 @@ thiserror = "1.0.40"
 chrono = "^0.4.24"
 freedesktop-icons = "0.2.3"
 freedesktop-desktop-entry = "0.5.0"
-surrealdb = { version = "1.0.0", features = ["kv-rocksdb"] }
+surrealdb = { version = "1.0.0", features = ["kv-rocksdb", "kv-mem"] }
 serde = { version = "1.0.188", features = ["derive"] }
-tokio = { version = "1.32.0", features = ["rt"]}
+tokio = { version = "1.32.0", features = ["rt", "macros"]}
 
 [build-dependencies]
 dbus-codegen = "0.10.0"
