--- a/notiflut_daemon/native/notification_server/Cargo.toml
+++ b/notiflut_daemon/native/notification_server/Cargo.toml
@@ -1,25 +1,22 @@
 [package]
 name = "notification_server"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
 crate-type = ["lib","staticlib","cdylib"]
 
 [dependencies]
 once_cell = "1.17.1"
-ctrlc = "3.2.5"
 dbus = "0.9.7"
 dbus-crossroads = "0.5.2"
-anyhow = "1"
-thiserror = "1.0.40"
+dbus-tokio = "0.7.6"
+futures = "0.3.29"
+tokio = { version = "1.34.0", features = ["full"] }
 chrono = "^0.4.24"
 freedesktop-icons = "0.2.3"
 freedesktop-desktop-entry = "0.5.0"
+anyhow = "1"
+thiserror = "1.0.40"
 surrealdb = { version = "1.0.0", features = ["kv-rocksdb", "kv-mem"] }
 serde = { version = "1.0.188", features = ["derive"] }
-tokio = { version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"] }
-
-[build-dependencies]
-dbus-codegen = "0.10.0"
