--- a/notiflut_daemon/pubspec.yaml
+++ b/notiflut_daemon/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
       url: https://github.com/LucaCoduriV/dart-mpris
       ref: 6c7a55e3990a827ad0198e67d47723fa28ff5877
   palette_generator: ^0.3.3+3
+  marquee: ^2.2.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
