--- a/notiflut_daemon/pubspec.yaml
+++ b/notiflut_daemon/pubspec.yaml
@@ -1,4 +1,4 @@
-name: notiflutland
+name: notiflut
 description: A new Flutter project.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
