Cache not tested

--- a/notiflut_daemon/native/notification_server/Cargo.toml
+++ b/notiflut_daemon/native/notification_server/Cargo.toml
@@ -22,3 +22,5 @@ surrealdb = { version = "1.0.0", features = ["kv-rocksdb", "kv-mem"] }
 serde = { version = "1.0.188", features = ["derive"] }
 xdg = "2.5.2"
 tracing = "0.1.40"
+cacache = "12.0.0"
+nanoid = "0.4.0"
