--- a/notiflut_daemon/native/notification_server/Cargo.toml
+++ b/notiflut_daemon/native/notification_server/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.5.0"
 edition = "2021"
 
 [lib]
-crate-type = ["lib","staticlib","cdylib"]
+crate-type = ["lib", "staticlib", "cdylib"]
 
 [dependencies]
+toml = "0.8.8"
 once_cell = "1.17.1"
 dbus = "0.9.7"
 dbus-crossroads = "0.5.2"
