--- a/notiflut_daemon/pubspec.yaml
+++ b/notiflut_daemon/pubspec.yaml
@@ -1,7 +1,7 @@
 name: notiflut
 description: A new Flutter project.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-version: 0.5.0+1
+version: 1.0.0
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
