--- a/notiflut_daemon/native/notification_server/Cargo.toml
+++ b/notiflut_daemon/native/notification_server/Cargo.toml
@@ -18,7 +18,7 @@ chrono = "^0.4.24"
 freedesktop-icons = "0.2.3"
 freedesktop-desktop-entry = "0.5.0"
 anyhow = "1"
-thiserror = "1.0.40"
+thiserror = "1.0.50"
 surrealdb = { version = "1.0.0", features = ["kv-rocksdb", "kv-mem"] }
 serde = { version = "1.0.188", features = ["derive"] }
 xdg = "2.5.2"
@@ -26,3 +26,4 @@ tracing = "0.1.40"
 cacache = "12.0.0"
 nanoid = "0.4.0"
 const_format = "0.2.32"
+notify = "6.1.1"
