--- a/notiflut_ctl/Cargo.toml
+++ b/notiflut_ctl/Cargo.toml
@@ -13,3 +13,4 @@ anyhow = "1"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.105"
 clap = { version = "4.2.1", features = ["cargo", "derive"] }
+notify = "6.1.1"
